Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14721

Big transaction events get lost on semisync master when replicate_events_marked_for_skip=FILTER_ON_MASTER

    XMLWordPrintable

Details

    • 10.2.12, 10.0.34, 10.1.31, 10.2.13

    Description

      In a regular Master-Slave configuration the Slave sql erros out a dup key.

      The slave has been set up via backup restore and is claimed not to have
      any local updates. The backup restore procedure is standard to include
      `set global gtid_slave_pos=$GTID_from_backup` where the gtid value is
      extracted from `xtrabackup_info`. Barring a mistake of the slave gtid state setting,
      the following
      ``change master to master_host='xx.xx.xxx', master_port=zzzz master_user='user', master_password='xxxxx', master_use_gtid=slave_pos;
      start slave;```

      should've worked out without any issue.
      However the slave stopped. More details can be found on the customer issue page.

      Attachments

        Issue Links

          Activity

            People

              Elkin Andrei Elkin
              Elkin Andrei Elkin
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 26.75d
                  26.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.